--- a/app/src/main/res/xml/preferences_location.xml
+++ b/app/src/main/res/xml/preferences_location.xml
@@ -8,9 +8,9 @@
         app:iconSpaceReserved="false">
 
         <ListPreference
-            android:icon="@drawable/ic_pref_profile_location"
+            android:icon="@drawable/ic_selection_marker"
             android:key="com.fieldbook.tracker.GENERAL_LOCATION_COLLECTION"
-            android:summary="@string/pref_general_location_collection_summary"
+            android:summary="%s"
             android:title="@string/pref_general_location_collection_title"
             android:entries="@array/pref_general_location_acquisition_level_entries"
             android:entryValues="@array/pref_general_location_acquisition_level_values"
