reorg appearance and collect and simplify summaries

--- a/app/src/main/res/xml/preferences_behavior.xml
+++ b/app/src/main/res/xml/preferences_behavior.xml
@@ -33,7 +33,7 @@
         <ListPreference
             android:icon="@drawable/ic_adv_hide_entries"
             android:key="com.fieldbook.tracker.HIDE_ENTRIES"
-            android:summary="@string/preferences_general_skip_entries_disabled"
+            android:summary="%s"
             android:title="@string/preferences_behavior_skip_entries_title"
             android:entries="@array/pref_behavior_skip_entries_entries"
             android:entryValues="@array/pref_behavior_skip_entries_values"
