--- a/app/src/main/res/layout/app_intro_setup_slide.xml
+++ b/app/src/main/res/layout/app_intro_setup_slide.xml
@@ -4,21 +4,20 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/main_primary"
-    android:orientation="vertical"
-    android:gravity="center">
+    android:orientation="vertical">
 
     <TextView
         style="@style/AppIntroDefaultHeading"
-        android:id="@+id/slideTitle"
+        android:id="@+id/slide_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_margin="16dp"
+        android:layout_marginTop="70dp"
         android:text="" />
 
     <TextView
         style="@style/AppIntroDefaultText"
-        android:id="@+id/slideSummary"
+        android:id="@+id/slide_summary"
         android:layout_margin="16dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -26,7 +25,7 @@
         android:text="" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/radioButtonsRecyclerView"
+        android:id="@+id/setup_rv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
