--- a/app/src/main/res/layout/list_item_field_detail_recycler.xml
+++ b/app/src/main/res/layout/list_item_field_detail_recycler.xml
@@ -51,7 +51,6 @@
                         android:layout_height="wrap_content"
                         android:ellipsize="end"
                         android:singleLine="true"
-                        android:textSize="@dimen/text_size_large"
                         tools:text="field_section"/>
 
                     <TextView
@@ -60,8 +59,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:ellipsize="end"
-                        android:singleLine="true"
-                        android:textSize="@dimen/text_size_small" />
+                        android:singleLine="true"/>
                 </LinearLayout>
 
                 <!-- Trait Completeness Pie Chart -->
