--- a/app/src/main/res/layout/list_item_field_detail_recycler.xml
+++ b/app/src/main/res/layout/list_item_field_detail_recycler.xml
@@ -63,12 +63,21 @@
                 </LinearLayout>
 
                 <!-- Trait Completeness Pie Chart -->
-                <com.github.mikephil.charting.charts.PieChart
-                    android:id="@+id/traitCompletenessChart"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    android:layout_marginLeft="1dp"
-                    android:layout_marginRight="1dp"/>
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:padding="0dp">
+
+                    <com.github.mikephil.charting.charts.PieChart
+                        android:id="@+id/traitCompletenessChart"
+                        android:layout_width="0dp"
+                        android:layout_height="60dp"
+                        app:layout_constraintDimensionRatio="1:1"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"/>
+                </androidx.constraintlayout.widget.ConstraintLayout>
 
                 <ImageView
                     android:id="@+id/expand_collapse_icon"
@@ -94,9 +103,14 @@
                     android:padding="8dp"/>
 
                 <com.github.mikephil.charting.charts.BarChart
-                    android:id="@+id/countChart"
+                    android:id="@+id/histogram"
                     android:layout_width="match_parent"
                     android:layout_height="200dp"/>
+
+                <com.github.mikephil.charting.charts.HorizontalBarChart
+                    android:id="@+id/barChart"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
 
             </LinearLayout>
         </LinearLayout>
