--- a/app/src/main/res/layout/list_item_field_detail_recycler.xml
+++ b/app/src/main/res/layout/list_item_field_detail_recycler.xml
@@ -13,13 +13,13 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="8dp">
+        android:layout_margin="4dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:padding="16dp">
+            android:padding="8dp">
 
             <!-- Header for collapsible area -->
             <LinearLayout
@@ -72,7 +72,7 @@
                     <com.github.mikephil.charting.charts.PieChart
                         android:id="@+id/traitCompletenessChart"
                         android:layout_width="0dp"
-                        android:layout_height="60dp"
+                        android:layout_height="wrap_content"
                         app:layout_constraintDimensionRatio="1:1"
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintBottom_toBottomOf="parent"
