--- a/app/src/main/res/layout/app_intro_required_setup_item.xml
+++ b/app/src/main/res/layout/app_intro_required_setup_item.xml
@@ -23,6 +23,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text=""
+            android:textColor="@color/main_color_text_dark"
             android:padding="0dp"
             style="@style/AppIntroDefaultHeading"/>
 
@@ -31,6 +32,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text=""
+            android:textColor="@color/main_color_text_dark"
             android:padding="2dp"
             android:textAlignment="textStart"
             style="@style/AppIntroDefaultText"/>
