--- a/app/src/main/res/layout/app_intro_setup_slide.xml
+++ b/app/src/main/res/layout/app_intro_setup_slide.xml
@@ -13,6 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="70dp"
+        android:textColor="@color/main_color_text_dark"
         android:text="" />
 
     <TextView
@@ -22,6 +23,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:textColor="@color/main_color_text_dark"
         android:text="" />
 
     <androidx.recyclerview.widget.RecyclerView
