--- a/app/src/main/res/layout/fragment_storage_definer.xml
+++ b/app/src/main/res/layout/fragment_storage_definer.xml
@@ -12,7 +12,7 @@
         app:layout_constraintTop_toTopOf="parent"
         android:layout_margin="16dp"
         android:id="@+id/frag_storage_definer_title_tv"
-        android:text="@string/frag_storage_definer_title"/>
+        android:text="@string/storage_definer_title"/>
 
     <TextView
         android:layout_width="0dp"
@@ -22,7 +22,7 @@
         app:layout_constraintTop_toBottomOf="@id/frag_storage_definer_title_tv"
         android:id="@+id/frag_storage_definer_summary_tv"
         android:layout_margin="16dp"
-        android:text="@string/frag_storage_definer_summary"/>
+        android:text="@string/storage_definer_summary"/>
 
     <ProgressBar
         android:visibility="invisible"
@@ -35,7 +35,7 @@
         android:id="@+id/frag_storage_definer_pb"/>
 
     <Button
-        android:text="@string/define"
+        android:text="@string/define_button_text"
         android:id="@+id/frag_storage_definer_choose_dir_btn"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
