unify sort icons

--- a/app/src/main/res/menu/menu_field_details.xml
+++ b/app/src/main/res/menu/menu_field_details.xml
@@ -10,7 +10,7 @@
 
     <item
         android:id="@+id/sort"
-        android:icon="@drawable/ic_field_sort"
+        android:icon="@drawable/ic_sort"
         app:showAsAction="always"
         android:title="@string/field_sort_entries" />
 
