--- a/app/src/main/res/menu/menu_fields.xml
+++ b/app/src/main/res/menu/menu_fields.xml
@@ -14,7 +14,7 @@
         android:title="@string/menu_fields_plot_by_distance_title" />
     <item
         android:id="@+id/sortFields"
-        android:icon="@drawable/ic_tb_sort"
+        android:icon="@drawable/ic_sort"
         android:showAsAction="ifRoom"
         android:title="@string/menu_fields_sort_list" />
 </menu>
