--- a/app/src/main/res/layout/dialog_field_sort.xml
+++ b/app/src/main/res/layout/dialog_field_sort.xml
@@ -45,7 +45,7 @@
         android:contentDescription="@string/dialog_field_sort_toggle_order_content_description"
         android:minWidth="48dp"
         android:minHeight="48dp"
-        android:src="@drawable/ic_tb_sort"
+        android:src="@drawable/ic_sort"
         app:layout_constraintBottom_toTopOf="@id/dialog_field_sort_ok_btn"
         app:layout_constraintEnd_toStartOf="@id/dialog_field_sort_add_btn"
         app:layout_constraintStart_toEndOf="@id/dialog_field_sort_delete_all_btn"
