--- a/app/src/main/res/layout/fragment_field_detail.xml
+++ b/app/src/main/res/layout/fragment_field_detail.xml
@@ -26,7 +26,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:padding="16dp">
+        android:padding="8dp">
 
         <!-- Overview Card -->
         <androidx.cardview.widget.CardView
@@ -39,11 +39,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:padding="16dp">
+                android:paddingTop="8dp"
+                android:paddingBottom="8dp">
 
                 <!-- Header for collapsible area -->
                 <LinearLayout
-                    android:id="@+id/collapsible_header"
+                    android:id="@+id/overview_collapsible_header"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
@@ -51,12 +52,17 @@
                     android:clickable="true"
                     android:focusable="true">
 
+                    <ImageView
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:layout_margin="8dp"
+                        android:src="@drawable/ic_land_fields" />
+
                     <LinearLayout
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:orientation="vertical"
-                        android:layout_marginBottom="8dp">
+                        android:orientation="vertical">
 
                         <TextView
                             style="@style/TextViewStyle.Bold.Title"
@@ -74,7 +80,7 @@
 
                     <!-- Collapse/Expand Icon -->
                     <ImageView
-                        android:id="@+id/expand_collapse_icon"
+                        android:id="@+id/overview_expand_collapse_icon"
                         android:layout_width="30dp"
                         android:layout_height="30dp"
                         android:src="@drawable/ic_chevron_down" />
@@ -82,19 +88,21 @@
 
                 <!-- Collapsible Content -->
                 <LinearLayout
-                    android:id="@+id/collapsible_content"
+                    android:id="@+id/overview_collapsible_content"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
-                    android:visibility="gone">
+                    android:visibility="gone"
+                    android:paddingTop="8dp"
+                    android:paddingLeft="8dp"
+                    android:paddingRight="8dp">
 
                     <!-- Field Narrative Item -->
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="horizontal"
-                        android:gravity="center_vertical"
-                        android:layout_marginBottom="8dp">
+                        android:gravity="center_vertical">
 
                         <TextView
                             style="@style/TextViewStyle.Sub"
@@ -127,8 +135,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:paddingTop="12dp"
-                android:paddingBottom="12dp">
+                android:paddingTop="8dp"
+                android:paddingBottom="8dp">
 
                 <!-- Collect Item -->
                 <LinearLayout
@@ -148,7 +156,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:orientation="vertical"
-                        android:layout_marginEnd="16dp">
+                        android:layout_marginEnd="8dp">
 
                         <TextView
                             style="@style/TextViewStyle.Bold.Title"
@@ -193,8 +201,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:paddingTop="12dp"
-                android:paddingBottom="12dp">
+                android:paddingTop="8dp"
+                android:paddingBottom="8dp">
 
                 <!-- Export Item -->
                 <LinearLayout
@@ -214,7 +222,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:orientation="vertical"
-                        android:layout_marginEnd="16dp">
+                        android:layout_marginEnd="8dp">
 
                         <TextView
                             style="@style/TextViewStyle.Bold.Title"
@@ -259,7 +267,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:padding="16dp">
+                android:paddingTop="8dp"
+                android:paddingBottom="8dp">
 
                 <!-- Sync Item -->
                 <LinearLayout
@@ -268,12 +277,18 @@
                     android:orientation="horizontal"
                     android:gravity="center_vertical">
 
+                    <ImageView
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:layout_margin="8dp"
+                        android:src="@drawable/ic_field_sync" />
+
                     <LinearLayout
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:orientation="vertical"
-                        android:layout_marginEnd="16dp">
+                        android:layout_marginEnd="8dp">
 
                         <TextView
                             style="@style/TextViewStyle.Bold.Title"
@@ -292,7 +307,8 @@
                     <ImageView
                         android:layout_width="30dp"
                         android:layout_height="30dp"
-                        android:src="@drawable/ic_field_sync" />
+                        android:src="@drawable/ic_chevron_right" />
+
                 </LinearLayout>
 
             </LinearLayout>
@@ -309,29 +325,36 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:padding="16dp">
+                android:paddingTop="8dp"
+                android:paddingBottom="8dp">
 
-                <!-- Title -->
-                <TextView
-                    style="@style/TextViewStyle.Bold.Title"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/field_data_title"
-                    android:layout_marginBottom="8dp"/>
-
-                <!-- Traits Item -->
+                <!-- Header for collapsible area -->
                 <LinearLayout
+                    android:id="@+id/data_collapsible_header"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
-                    android:gravity="center_vertical">
+                    android:gravity="center_vertical"
+                    android:clickable="true"
+                    android:focusable="true">
+
+                    <ImageView
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:layout_margin="8dp"
+                        android:src="@drawable/ic_chart_bar" />
 
                     <LinearLayout
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:orientation="vertical"
-                        android:layout_marginBottom="8dp">
+                        android:orientation="vertical">
+
+                        <TextView
+                            style="@style/TextViewStyle.Bold.Title"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/field_data_title"/>
 
                         <TextView
                             style="@style/TextViewStyle.Sub"
@@ -350,16 +373,31 @@
 
                     </LinearLayout>
 
-<!--                    <ImageView-->
-<!--                        android:layout_width="wrap_content"-->
-<!--                        android:layout_height="wrap_content"-->
-<!--                        android:src="@drawable/ic_nav_drawer_traits" />-->
+                    <!-- Collapse/Expand Icon -->
+                    <ImageView
+                        android:id="@+id/data_expand_collapse_icon"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:src="@drawable/ic_chevron_down" />
                 </LinearLayout>
 
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/fieldDetailRecyclerView"
+                <!-- Collapsible Content -->
+                <LinearLayout
+                    android:id="@+id/data_collapsible_content"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:visibility="gone"
+                    android:paddingTop="8dp"
+                    android:paddingLeft="8dp"
+                    android:paddingRight="8dp">
+
+                    <!-- Individual Trait Data Cards -->
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/fieldDetailRecyclerView"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content" />
+                </LinearLayout>
 
             </LinearLayout>
         </androidx.cardview.widget.CardView>
