--- a/app/src/main/res/layout/fragment_field_detail.xml
+++ b/app/src/main/res/layout/fragment_field_detail.xml
@@ -97,19 +97,88 @@
                     android:paddingLeft="8dp"
                     android:paddingRight="8dp">
 
-                    <!-- Field Narrative Item -->
-                    <LinearLayout
+                    <!-- Field Detail Chips -->
+                    <com.google.android.material.chip.ChipGroup
+                        android:id="@+id/fieldNarrativeChipGroup1"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:orientation="horizontal"
-                        android:gravity="center_vertical">
+                        app:singleLine="false"
+                        app:chipSpacingHorizontal="8dp"
+                        app:chipSpacingVertical="8dp">
 
-                        <TextView
-                            style="@style/TextViewStyle.Sub"
-                            android:id="@+id/fieldNarrativeTextView"
+                        <com.google.android.material.chip.Chip
+                            android:id="@+id/sourceChip"
                             android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"/>
-                    </LinearLayout>
+                            android:layout_height="wrap_content"
+                            android:clickable="false"
+                            android:focusable="false"
+                            app:chipIcon="@drawable/ic_table_arrow_right"
+                            app:chipIconSize="24dp"
+                            app:ensureMinTouchTargetSize="false"
+                            app:closeIconVisible="false"
+                            style="@style/Widget.MaterialComponents.Chip.Entry"/>
+
+                        <com.google.android.material.chip.Chip
+                            android:id="@+id/originalNameChip"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:clickable="false"
+                            android:focusable="false"
+                            app:chipIcon="@drawable/ic_rename"
+                            app:chipIconSize="24dp"
+                            app:ensureMinTouchTargetSize="false"
+                            app:closeIconVisible="false"
+                            style="@style/Widget.MaterialComponents.Chip.Entry"/>
+
+                    </com.google.android.material.chip.ChipGroup>
+
+                    <com.google.android.material.chip.ChipGroup
+                        android:id="@+id/fieldNarrativeChipGroup2"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        app:singleLine="false"
+                        android:paddingTop="8dp"
+                        app:chipSpacingHorizontal="8dp"
+                        app:chipSpacingVertical="8dp">
+
+                        <com.google.android.material.chip.Chip
+                            android:id="@+id/entryCountChip"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:clickable="false"
+                            android:focusable="false"
+                            app:chipIcon="@drawable/ic_dots_grid"
+                            app:chipIconSize="24dp"
+                            app:ensureMinTouchTargetSize="false"
+                            app:closeIconVisible="false"
+                            style="@style/Widget.MaterialComponents.Chip.Entry"/>
+
+                        <com.google.android.material.chip.Chip
+                            android:id="@+id/attributeCountChip"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:clickable="false"
+                            android:focusable="false"
+                            app:chipIcon="@drawable/ic_information_outline"
+                            app:chipIconSize="24dp"
+                            app:ensureMinTouchTargetSize="false"
+                            app:closeIconVisible="false"
+                            style="@style/Widget.MaterialComponents.Chip.Entry"/>
+
+                        <com.google.android.material.chip.Chip
+                            android:id="@+id/sortOrderChip"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:clickable="false"
+                            android:focusable="false"
+                            app:chipIcon="@drawable/ic_sort"
+                            app:chipIconSize="24dp"
+                            app:ensureMinTouchTargetSize="false"
+                            app:closeIconVisible="false"
+                            style="@style/Widget.MaterialComponents.Chip.Entry"/>
+
+                    </com.google.android.material.chip.ChipGroup>
+
                 </LinearLayout>
 
             </LinearLayout>
@@ -348,29 +417,50 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:orientation="vertical">
+                        android:orientation="horizontal"
+                        android:gravity="center_vertical">
 
                         <TextView
                             style="@style/TextViewStyle.Bold.Title"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="@string/field_data_title"/>
+                            android:text="@string/field_data_title"
+                            android:paddingRight="16dp"/>
 
-                        <TextView
-                            style="@style/TextViewStyle.Sub"
-                            android:id="@+id/traitCountTextView"
+                        <com.google.android.material.chip.ChipGroup
+                            android:id="@+id/dataChipGroup"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="50 traits"
-                            android:layout_marginBottom="8dp"/>
+                            android:gravity="center_vertical"
+                            app:singleLine="false"
+                            app:chipSpacingHorizontal="8dp"
+                            app:chipSpacingVertical="8dp"
+                            android:descendantFocusability="blocksDescendants">
 
-                        <TextView
-                            style="@style/TextViewStyle.Sub"
-                            android:id="@+id/observationCountTextView"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="250 observations by 2 people" />
+                            <com.google.android.material.chip.Chip
+                                android:id="@+id/traitCountChip"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:clickable="false"
+                                android:focusable="false"
+                                app:chipIcon="@drawable/ic_nav_drawer_traits"
+                                app:chipIconSize="24dp"
+                                app:ensureMinTouchTargetSize="false"
+                                app:closeIconVisible="false"
+                                style="@style/Widget.MaterialComponents.Chip.Entry" />
 
+                            <com.google.android.material.chip.Chip
+                                android:id="@+id/observationCountChip"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:clickable="false"
+                                android:focusable="false"
+                                app:chipIcon="@drawable/ic_binoculars"
+                                app:chipIconSize="24dp"
+                                app:ensureMinTouchTargetSize="false"
+                                app:closeIconVisible="false"
+                                style="@style/Widget.MaterialComponents.Chip.Entry" />
+                        </com.google.android.material.chip.ChipGroup>
                     </LinearLayout>
 
                     <!-- Collapse/Expand Icon -->
