--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,7 +7,7 @@
     <style name="AppTheme" parent="BaseAppTheme"/>
 
     <!-- all other themes inherit from the default one, but overwrite the colors -->
-    <style name="BaseAppTheme" parent="Theme.AppCompat.DayNight.NoActionBar">
+    <style name="BaseAppTheme" parent="Theme.MaterialComponents.DayNight.NoActionBar">
 
         <item name="android:windowActivityTransitions">false</item>
         <item name="windowNoTitle">true</item>
