update icons and use bridge theme

--- a/app/src/main/res/layout/fragment_field_detail.xml
+++ b/app/src/main/res/layout/fragment_field_detail.xml
@@ -10,7 +10,6 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="?attr/fb_color_primary"
         android:fitsSystemWindows="true"
         android:minHeight="?attr/actionBarSize"
         app:layout_constraintStart_toStartOf="parent"
@@ -443,7 +442,7 @@
                                 android:layout_height="wrap_content"
                                 android:clickable="false"
                                 android:focusable="false"
-                                app:chipIcon="@drawable/ic_nav_drawer_traits"
+                                app:chipIcon="@drawable/ic_ruler"
                                 app:chipIconSize="24dp"
                                 app:ensureMinTouchTargetSize="false"
                                 app:closeIconVisible="false"
@@ -455,7 +454,7 @@
                                 android:layout_height="wrap_content"
                                 android:clickable="false"
                                 android:focusable="false"
-                                app:chipIcon="@drawable/ic_binoculars"
+                                app:chipIcon="@drawable/ic_eye"
                                 app:chipIconSize="24dp"
                                 app:ensureMinTouchTargetSize="false"
                                 app:closeIconVisible="false"
