--- a/app/src/main/res/layout/list_item_field_detail_recycler.xml
+++ b/app/src/main/res/layout/list_item_field_detail_recycler.xml
@@ -92,7 +92,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:visibility="gone">
+                android:visibility="visible">
 
                 <TextView
                     android:id="@+id/noChartAvailableTextView"
