--- a/app/src/main/res/layout/fragment_field_detail.xml
+++ b/app/src/main/res/layout/fragment_field_detail.xml
@@ -118,6 +118,18 @@
                             app:chipBackgroundColor="?attr/defaultChipBackground" />
 
                         <com.google.android.material.chip.Chip
+                            android:id="@+id/originalNameChip"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:clickable="false"
+                            android:focusable="false"
+                            app:chipIcon="@drawable/ic_tag_arrow_right_outline"
+                            app:chipIconSize="24dp"
+                            app:ensureMinTouchTargetSize="false"
+                            app:closeIconVisible="false"
+                            app:chipBackgroundColor="?attr/defaultChipBackground" />
+
+                        <com.google.android.material.chip.Chip
                             android:id="@+id/entryCountChip"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
@@ -142,30 +154,16 @@
                             app:chipBackgroundColor="?attr/defaultChipBackground" />
 
                         <com.google.android.material.chip.Chip
-                            android:id="@+id/originalNameChip"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            app:chipIcon="@drawable/ic_rename"
-                            app:chipIconSize="24dp"
-                            app:ensureMinTouchTargetSize="false"
-                            app:closeIconVisible="false"
-                            app:chipBackgroundColor="?attr/selectableChipBackground"
-                            app:chipStartPadding="6dp"
-                            app:chipStrokeColor="?attr/selectableChipStroke"
-                            app:chipStrokeWidth="2dp" />
-
-                        <com.google.android.material.chip.Chip
                             android:id="@+id/sortOrderChip"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:clickable="false"
+                            android:focusable="false"
                             app:chipIcon="@drawable/ic_sort"
                             app:chipIconSize="24dp"
                             app:ensureMinTouchTargetSize="false"
                             app:closeIconVisible="false"
-                            app:chipBackgroundColor="?attr/selectableChipBackground"
-                            app:chipStartPadding="6dp"
-                            app:chipStrokeColor="?attr/selectableChipStroke"
-                            app:chipStrokeWidth="2dp" />
+                            app:chipBackgroundColor="?attr/defaultChipBackground" />
 
                     </com.google.android.material.chip.ChipGroup>
 
