move traits chip to trait card

--- a/app/src/main/res/layout/fragment_field_detail.xml
+++ b/app/src/main/res/layout/fragment_field_detail.xml
@@ -373,7 +373,7 @@
             </LinearLayout>
         </com.google.android.material.card.MaterialCardView>
 
-        <!-- Sync Card -->
+        <!-- Traits Card -->
         <com.google.android.material.card.MaterialCardView
             android:id="@+id/cardViewTraits"
             android:layout_width="match_parent"
@@ -413,19 +413,28 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:orientation="vertical"
-                        android:layout_marginEnd="16dp">
+                        android:gravity="center_vertical">
 
                         <TextView
                             style="@style/TextViewStyle.Bold.Title"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="@string/settings_traits"/>
+                            android:text="@string/settings_traits"
+                            android:paddingRight="16dp"
+                            android:paddingBottom="8dp"/>
 
-                        <TextView
-                            style="@style/TextViewStyle.Sub"
-                            android:id="@+id/traitsTextView"
+                        <com.google.android.material.chip.Chip
+                            android:id="@+id/traitCountChip"
                             android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"/>
+                            android:layout_height="wrap_content"
+                            android:clickable="false"
+                            android:focusable="false"
+                            app:chipIcon="@drawable/ic_ruler"
+                            app:chipIconSize="24dp"
+                            app:ensureMinTouchTargetSize="false"
+                            app:closeIconVisible="false"
+                            app:chipBackgroundColor="?attr/defaultChipBackground" />
+
                     </LinearLayout>
 
                     <ImageView
@@ -483,40 +492,18 @@
                             android:paddingRight="16dp"
                             android:paddingBottom="8dp"/>
 
-                        <com.google.android.material.chip.ChipGroup
-                            android:id="@+id/dataChipGroup"
+                        <com.google.android.material.chip.Chip
+                            android:id="@+id/observationCountChip"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:gravity="center_vertical"
-                            app:singleLine="false"
-                            app:chipSpacingHorizontal="8dp"
-                            app:chipSpacingVertical="8dp"
-                            android:descendantFocusability="blocksDescendants">
+                            android:clickable="false"
+                            android:focusable="false"
+                            app:chipIcon="@drawable/ic_eye"
+                            app:chipIconSize="24dp"
+                            app:ensureMinTouchTargetSize="false"
+                            app:closeIconVisible="false"
+                            app:chipBackgroundColor="?attr/defaultChipBackground" />
 
-                            <com.google.android.material.chip.Chip
-                                android:id="@+id/traitCountChip"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:clickable="false"
-                                android:focusable="false"
-                                app:chipIcon="@drawable/ic_ruler"
-                                app:chipIconSize="24dp"
-                                app:ensureMinTouchTargetSize="false"
-                                app:closeIconVisible="false"
-                                app:chipBackgroundColor="?attr/defaultChipBackground" />
-
-                            <com.google.android.material.chip.Chip
-                                android:id="@+id/observationCountChip"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:clickable="false"
-                                android:focusable="false"
-                                app:chipIcon="@drawable/ic_eye"
-                                app:chipIconSize="24dp"
-                                app:ensureMinTouchTargetSize="false"
-                                app:closeIconVisible="false"
-                                app:chipBackgroundColor="?attr/defaultChipBackground" />
-                        </com.google.android.material.chip.ChipGroup>
                     </LinearLayout>
 
                     <!-- Collapse/Expand Icon -->
