converted file explorer activity to kotlin added coroutines to search files in background thread added progress bar while files are loading added new dimension value to adjust size of progress bar

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -30,4 +30,7 @@
     <dimen name="fb_trait_fab_size">76dp</dimen>
     <dimen name="fb_trait_big_fab_size">176dp</dimen>
     <dimen name="fb_trait_fab_image_size">38dp</dimen>
+
+    <dimen name="act_file_explorer_progress_bar_size">256dp</dimen>
+
 </resources>
